모바일 html, css 수정

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6648,11 +6648,11 @@ p.dib{display:inline-block !important;}
 .community_visual_wrap{position: relative;width: 100%;height: auto;margin-top: 30px;}
 .community_visual{float: none;width: 100%;height: auto;}
 .community_visual_event{float: none;width: 100%;height: auto;}
-.works_wrap{margin-top:70px;position: relative;}
+.works_wrap{margin-top:30px;position: relative;}
 .works_wrap:after {content: "";display: block;clear: both;}
 .works_wrap .tit_wrap{position: relative;}
 .works_wrap .tit_wrap h2{font-size: 2.5rem;letter-spacing: -1.5px;padding: 20px 0;}
-.works_wrap .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 0 no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
+.works_wrap .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 1px no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
 .works_wrap ul{width: 100%;margin-top: 22px;}
 .works_wrap ul li{float: left;width: 100%;display: flex;flex-direction: column;}
 .works_wrap ul li a{text-align: center;}/* 23.08.01 내용추가 */
@@ -6670,7 +6670,7 @@ p.dib{display:inline-block !important;}
 .master_wrap .master_img img{width: 100%;height: 100%;object-fit: cover;}
 .master_wrap .text{text-align: center;font-size: 2rem;color: #111111;padding: 20px 0;}
 
-.workspic_row{display: grid;grid-template-columns: repeat(2, 1fr);gap: 16px;}
+.workspic_row{display: flex;flex-direction: column;}
 
 
 /** 23.08.01 내용추가 끝 **/
@@ -6678,7 +6678,7 @@ p.dib{display:inline-block !important;}
 .master_wrap{margin-top:34px;position: relative;}
 .master_wrap:after {content: "";display: block;clear: both;}
 .master_wrap .tit_wrap h2{font-size: 2.5rem;letter-spacing: -1.5px;padding: 20px 0;}
-.master_wrap .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 0 no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
+.master_wrap .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 1px no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
 .master_wrap ul{width: 100%;margin-top: 22px;}
 .master_wrap ul li{float: left;width: 100%;display: flex;flex-direction: column;}
 .master_wrap ul li a{text-align: center;}/* 23.08.01 내용추가 */
@@ -6692,7 +6692,7 @@ p.dib{display:inline-block !important;}
 .intro_posts .tit_wrap h2{font-size: 2.375rem;letter-spacing: -1.5px;}
 .intro_posts .tit_wrap h2 img{vertical-align: middle;}
 .intro_posts .tit_wrap h2 span{padding-left: 12px;}
-.intro_posts .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 0 no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
+.intro_posts .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 1px no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
 .intro_posts ol{width: 100%;}
 .intro_posts ol li{position: relative;padding: 12px 35px;counter-increment: number;font-size: 2.125rem;}
 /* .intro_posts ol li:before{content: counter(number, decimal);background: #e32d1c;border-radius: 100%;padding: 1px 8px;margin-right: 5px;color: #ffffff;font-size: 14px;} */
@@ -6709,7 +6709,7 @@ p.dib{display:inline-block !important;}
 .issue_posts .tit_wrap h2{font-size: 2.375rem;letter-spacing: -1.5px;}
 .issue_posts .tit_wrap h2 img{vertical-align: middle;}
 .issue_posts .tit_wrap h2 span{padding-left: 12px;}
-.issue_posts .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 0 no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
+.issue_posts .tit_wrap .btn_more{width: 80px;font-size: 2rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 1px no-repeat;text-align: left;position: absolute;top: 20px;right: 20px;}
 .issue_posts ol{width: 100%;}
 .issue_posts ol li{position: relative;padding: 12px 35px;font-size: 2.125rem;}
 /* .issue_posts ol li:before{content: counter(number, decimal);background: #e32d1c;border-radius: 100%;padding: 1px 8px;margin-right: 5px;color: #ffffff;font-size: 14px;} */
@@ -6721,7 +6721,7 @@ p.dib{display:inline-block !important;}
 .issue_posts ol li:last-child{border-bottom: 1px solid #eaebea;}
 .issue_posts ol li em{font-weight: bold;margin-left: 16px;color: #b81d2c;}
 
-.input_wrap{margin-top: 30px;}
+.input_wrap{margin: 30px 0 10px;}
 .input_wrap:after{content: "";display: block;clear: both;}
 .input_cal{position: relative;width: 160px;display: inline-block;}
 .input_cal input{width: 160px;height: 44px;border: #d9d9d9 1px solid;border-radius: 5px;padding: 12px;font-size: 2rem;color: #111111;font-weight: 500;letter-spacing: -1.5px;}
@@ -6729,8 +6729,8 @@ p.dib{display:inline-block !important;}
 
 .notice{width: 100%;height: auto;margin: 14px 0 10px;}
 .notice:after{content: "";display: block;clear: both;}
-.notice .tit{float: left;background: #808080;width: 10%;padding: 22px 0;border-radius: 10px 0 0 10px;font-size: 2.625rem;font-weight: 700;color: #ffffff;text-align: center;}
-.notice .contents{float: left;background: #f5f5f5;width: 90%;border-radius: 0 10px 10px 0;padding: 26px;font-size: 2rem;position: relative;margin-top: 0;}
+.notice .tit{float: left;background: #808080;width: 10%;padding-top: 23px;border-radius: 10px 0 0 10px;font-size: 2.5rem;font-weight: 700;color: #ffffff;text-align: center;}
+.notice .contents{float: left;background: #f5f5f5;width: 90%;border-radius: 0 10px 10px 0;padding: 26px 10px;font-size: 2rem;position: relative;margin-top: 0;}
 
 .sel_sorting{float: left;position: relative;top: 0;right: 0;width: 50%;}
 .sel_sorting select{position: relative; width: 100%;height: 44px;background: #ffffff;padding: 10px;border: #d9d9d9 1px solid;border-radius: 5px;font-family: 'Noto Sans KR';font-size: 2rem;color: #111111;font-weight: 500;letter-spacing: -1.5px;}
@@ -6739,10 +6739,10 @@ p.dib{display:inline-block !important;}
 .sel_form select{position: relative; width: 100%;height: 44px;background: #ffffff;padding: 10px;border: #d9d9d9 1px solid;border-radius: 5px;font-family: 'Noto Sans KR';font-size: 2rem;color: #111111;font-weight: 500;letter-spacing: -1.5px;}
 .sel_form:after{content: '';background-image: url(../img/img_new/ico_select.png);width: 12px;height: 8px;background-size: 100%;position: absolute;right: 15px;top: 50%;transform: translateY(-50%);}
 
-.workspic_wrap{margin-top: 80px;}
-.workspic_row{border-bottom: 1px solid #f5f5f5;margin-top: 50px;}
+.workspic_wrap{margin-top: 30px;}
+.workspic_row{border-bottom: 1px solid #f5f5f5;}
 .workspic_row:after{content: "";display: block;clear: both;}
-.workspic_row ul li{float: none;margin-left: 20px;display: flex;justify-content: flex-start;}
+.workspic_row ul li{float: none;margin-left: 0;display: flex;justify-content: flex-start;}
 .workspic_row ul li:first-child{margin-left: 0px;}
 .works_pic ul li{float: none;margin-left: 0 !important;}
 .works_pic .header{height: 83px;}
@@ -6756,17 +6756,18 @@ p.dib{display:inline-block !important;}
 .works_pic .ico_new{position: absolute;width: 50px;height: 50px;background: #ec3c3c;border-radius: 999px;top: 10px;right: 10px;font-family: 'Roboto Condensed';font-style: italic;font-size: 18px;font-weight: 500;color: #ffffff;text-align: center;padding-top: 14px;}
 .works_pic .icon_box{background: #f5f5f5;}
 .works_pic .icon_box:after{content: "";display: block;clear: both;}
+/* 23.08.18 내용추가 */ .works_pic .icon_box ul{display: flex;justify-content: space-evenly;}
 .works_pic .icon_box ul li{float: left;text-align: center;font-size: 2rem;padding: 2px;display: flex;flex-direction: column;}
 .works_pic .icon_box ul li:first-child{float: left;text-align: center;font-size: 2rem;padding-left: 6px;}
 .works_pic .icon_box ul li .ico_good{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_good.png") 50% 50% no-repeat;}
 .works_pic .icon_box ul li .ico_scrap{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;}
 .works_pic .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;}
 .works_pic .icon_box ul li .ico_comments{width: 50px;height: 50px;border-radius: 999px;background: #ffffff url("../img/img_new/ico_comments.png") 50% 50% no-repeat;}
-.works_pic .text{font-size: 2.125rem;color: #111111;padding: 20px;text-align: center;}
+.works_pic .text{font-size: 2.125rem;color: #111111;padding: 20px;text-align: center;width: auto;}
 .btn_area{padding: 80px 0;text-align: center;}
 .btn_area button{font-size: 20px;color: #828282;font-weight: 500; border: 2px solid #f1f1f1;padding: 15px 130px;}
 
-.exhint_wrap{margin-top: 110px;}
+.exhint_wrap{margin-top: 30px;}
 .exhint_row{margin-top: 30px;}
 .exhint_row:after{content: "";display: block;clear: both;}
 /*2023-07-28 정영우 수정*/
@@ -6774,14 +6775,14 @@ p.dib{display:inline-block !important;}
     float: left;
     position: relative;
     width: 150px;
-    height: auto;
+    height: 162px;
     object-fit: cover;
     margin: 0 10px 0 0;
 }
 .exhint_row .contents{float: none;width: 100%;}
-.exhint_row .contents .tit{display: flex; justify-content: flex-start;}
-.exhint_row .contents ul li .tit em{font-size: 3.875rem;font-weight: 500;letter-spacing: -1.5px;}
-.exhint_row .contents ul li .tit .ico_new{margin-left: 16px;width: 40px;height: 40px;background: #ec3c3c;border-radius: 999px;font-family: 'Roboto Condensed';font-style: italic;font-size: 2rem;font-weight: 500;color: #ffffff;text-align: center;padding-top: 10px;}
+.exhint_row .contents .tit{display: flex;justify-content: space-between;}
+.exhint_row .contents ul li .tit em{font-size: 3rem;font-weight: 500;letter-spacing: -1.5px;width: 39rem;}
+.exhint_row .contents ul li .tit .ico_new{margin-left: 16px;width: 43px;height: 40px;background: #ec3c3c;border-radius: 999px;font-family: 'Roboto Condensed';font-style: italic;font-size: 2rem;font-weight: 500;color: #ffffff;text-align: center;padding-top: 10px;}
 .exhint_row .contents ul li p{font-size: 2rem;overflow: hidden;text-overflow: ellipsis;white-space: normal;line-height: 1.2;text-align: left;word-wrap: break-word;display: -webkit-box;-webkit-line-clamp: 5;-webkit-box-orient: vertical;}
 
 .exhint_row .contents ul li .user_wrap{position: relative;border-top: 1px solid #e8e8e8;border-bottom: 1px solid #e8e8e8;}
@@ -6801,7 +6802,7 @@ p.dib{display:inline-block !important;}
 .exhint_row .contents ul li .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;}
 .exhint_row .contents ul li .icon_box ul li .ico_comments{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_comments.png") 50% 50% no-repeat;}
 
-.pagination{margin: 80px 0;display: flex !important;justify-content: center !important;font-size: 2.125rem;}
+.pagination{margin: 30px 0;display: flex !important;justify-content: center !important;font-size: 2.125rem;}
 .paginate strong{padding: 0 8px 5px;border-bottom: 1px solid #111111;}
 .paginate a{padding: 0 10px;}
 .next{display: inline-block;width: 40px;height: 40px;border: 1px solid #e8e8e8;border-radius: 5px;background: url("../img/img_new/ico_next.png") 50% 50% no-repeat;text-indent: -999999px;overflow: hidden;padding: 10px;vertical-align: middle;}
@@ -7125,7 +7126,7 @@ p.dib{display:inline-block !important;}
 .mypage_collectcreate_wrap .second form .add_area ul li .pic_movie .icon_modify_box ul li .ico_wbasket{width: 16px;height: 20px;background: url("../img/img_new/ico_wbasket.png") 50% 50% no-repeat;margin: 0 auto;}
 .mypage_collectcreate_wrap .second form .add_area ul li .pic_movie .icon_modify_box ul li .ico_up{width: 12px;height: 6px;background: url("../img/img_new/ico_up.png") 50% 50% no-repeat;margin: 0 auto;}
 .mypage_collectcreate_wrap .second form .add_area ul li .pic_movie .icon_modify_box ul li .ico_down{width: 12px;height: 6px;background: url("../img/img_new/ico_down.png") 50% 50% no-repeat;margin: 0 auto;}
-.mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form .keyword .box span{font-size: 1.875rem;font-weight: 300;color: #ffffff;padding: 5px 10px;background: #8f8f8f;border-radius: 5px;margin-top: 10px;}
+.mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form .keyword .box span{font-size: 2rem;font-weight: 300;color: #ffffff;padding: 5px 10px;background: #8f8f8f;border-radius: 5px;margin-top: 10px;}
 .mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form .keyword .box span img{vertical-align: baseline;margin-left: 10px;}
 
 .mypage_collectcreate_wrap .second form .add_area ul li .pic_movie .picture{width: 120px;padding: 8px 16px;border: 1px solid #d6d6d6;border-radius: 5px;text-align: center;cursor: pointer;}
@@ -7136,7 +7137,7 @@ p.dib{display:inline-block !important;}
 .mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form{display: flex;flex-direction: column;margin-left: 0;width: 100%;}
 .mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form input{width: 100%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;font-size: 2.125rem;margin-top: 10px;}
 .mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form textarea{width: 100%;height: 190px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;margin-top: 10px;font-size: 2.125rem;}
-.mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form .keyword span{width: auto;font-size: 1.875rem;font-weight: 300;color: #565656;padding: 16px 20px;}
+.mypage_collectcreate_wrap .second form .add_area ul li .picmovie_form .keyword span{width: auto;font-size: 2rem;font-weight: 300;color: #565656;padding: 16px 20px;}
 .mypage_collectcreate_wrap .second form .btn_add{border: 1px solid #000000;padding: 16px 0;text-align: center;margin-left: 185px;margin-right: 15px;cursor: pointer;}
 .mypage_collectcreate_wrap .second form .btn_add button{font-size: 20px;font-weight: 700;color: #111111;}
 
@@ -7300,7 +7301,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_info_wrap .works_info_right .tstyle1{margin-top: 20px !important;}
 .works_info_wrap .works_info_right .tstyle1 th{font-size: 2.25rem;font-weight: 600;color: #111111;width: 130px;padding-bottom: 12px;text-align: left;}
 .works_info_wrap .works_info_right .tstyle1 td{font-size: 2rem;font-weight: 300;color: #111111;padding-bottom: 12px;text-align: left;}
-.works_info_wrap .works_info_right .btn_worksInfo_wrap{margin-top: 80px;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap{margin-top: 0;}
 .works_info_wrap .works_info_right .btn_worksInfo_wrap button{width: 100%;font-size: 2.25rem;color: #ffffff;background: #ea655b;padding: 16px 0;}
 
 .works_showingoff_detai2_page_wrap{margin-top: 50px;padding-bottom: 200px;position: relative;}
@@ -7454,16 +7455,6 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .main_wrap .exhint_rewview_wrap .exhint_review .name span{height: 26px;background: #8f8f8f;font-size: 2rem;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;margin: 17px 0 0 10px;}
 .main_wrap .exhint_rewview_wrap .exhint_review .text{font-size: 2.125rem;font-weight: 300;color: #111111;text-align: center;margin-top: 20px;}
 
-.fs_2rem{font-size: 2rem !important;}
-.pt10{padding-top: 10px !important;}
-.mt10{margin-top: 10px !important;}
-.mt20{margin-top: 20px !important;}
-.mt30{margin-top: 30px !important;}
-.ml7{margin-left: 7px !important;}
-.width33per{width: 33% !important;}
-.width34per{width: 34% !important;}
-.width77per{width: 77% !important;}
-
 /* 23.08.09 재현 추가 내용 css */
 .newsletter_wrap{width: 45rem;position: absolute;left: 4rem;top: 73%;}
 .newsletter_wrap legend{border: none;}
@@ -7537,7 +7528,25 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .comments_box_wrap form p input{width: 100%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;margin-bottom: 10px;}
 .comments_box_wrap form p label{display: block;float: left;font-size: 2.125rem;font-weight: 500;color: #111111;width: 175px;padding-top: 11px;}
 .comments_box_wrap .comments_box .user_wrap .user_name span{font-size: 2rem;font-weight: 500;color: #111111;padding: 3px 8px;border-radius: 5px;display: inline-block;}
+.comt_content {text-overflow: ellipsis;overflow: hidden;display: -webkit-box;-webkit-line-clamp: 4;-webkit-box-orient: vertical;height: 100px !important;font-size: 2rem;}
+.exhint_row .mypage_exhint_list_img {float: left;position: relative;width: 150px;height: 149px;object-fit: cover;margin: 0 10px 0 0;}
+.mypage_exhint_list_img .ico_num{position:absolute;top: 80%;right: 10px;width: 30px;height: 20px;background: #8f8f8f;border-radius: 5px;font-family: 'Roboto Condensed';font-size: 2.125rem;font-weight: 500;color: #ffffff;text-align: center;padding-top: 1px;}
 
+
+
+
+
+.fs_2rem{font-size: 2rem !important;}
+.pt10{padding-top: 10px !important;}
+.mt10{margin-top: 10px !important;}
+.mt20{margin-top: 20px !important;}
+.mt30{margin-top: 30px !important;}
+.ml7{margin-left: 7px !important;}
+.mb10{margin-bottom: 10px !important;}
+.width33per{width: 33% !important;}
+.width34per{width: 34% !important;}
+.width77per{width: 77% !important;}
+.width100per{width: 100% !important;}
 
 
 
