--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
@@ -106,15 +106,15 @@
                     <li><a href="/community/exhintList" class="over">전시후기&소개</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
-                    <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
                 </ul>
             </div>
+			<button class="btn_recording">기록하기</button>
             <div class="input_wrap">
                 <div class="input_cal" style="display: inline; position: static;">
-                	<input type="date" id="startDate" onchange="checkCalendar()">
+                	<input type="date" id="startDate" onchange="checkCalendar()" class="mb10">
                 	<span>~</span>
-                	<input type="date" id="endDate" onchange="checkCalendar()">
-                	<div class="sel_sorting">
+                	<input type="date" id="endDate" onchange="checkCalendar()" class="mb10">
+                	<div class="sel_sorting width33per">
 	                    <select class="exhSelectBox" name="comtSort" id="comtSort">
 	                        <option value="">정렬</option>
 	                        <option value="newest">최신순</option>
@@ -123,12 +123,12 @@
 	                        <option value="pastOrder">과거 순</option>
 	                    </select>
 	                </div>
-                    <div class="sel_form">
+                    <div class="sel_form width33per">
 	                    <select class="exhSelectBox" name="exhibitRegionCd" id="exhibitRegionCd">
 	                        <option value="">지역</option>
 	                    </select>
 	                </div>
-	                <div class="sel_form">
+	                <div class="sel_form width33per">
 	                    <select class="exhSelectBox" name="exhibitTypCd" id="exhibitTypCd">
 	                        <option value="">구분</option>
 	                    </select>
