--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="mypage_exhint_contents_wrap">
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -285,7 +285,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -349,7 +349,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -381,7 +381,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -413,7 +413,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -445,7 +445,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -477,7 +477,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
