--- a/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_sold_mo.html
@@ -213,7 +213,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="btn_worksInfo_wrap mt30">
+                        <div class="btn_worksInfo_wrap">
                             <button class="width32per">구매하기</button>
                             <button class="width32per ml7">요청하기</button>
                             <button class="btn_list width32per ml7">목록</button>
