--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_mo.html
@@ -168,7 +168,7 @@
                     </div>                    
                     <div class="mypage_exhint_contents_wrap mt30">
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -296,7 +296,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -328,7 +328,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -360,7 +360,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint03.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint04.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -424,7 +424,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
@@ -456,7 +456,7 @@
                             </div>
                         </div>
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <div class="mypage_exhint_list_img"><img src="/resources/img/img_new/sample_exhint02.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents">
                                 <ul>
                                     <li>
